@@ -12,6 +12,7 @@
 
 ngIRCd CVSHEAD
 
+  - Added short command line option "-t" as alternative to "--configtest".
   - Added optional support for "IDENT" lookups on incoming connections. You
     have to enable this function with the ./configure switch "--with-ident".
     The default is not to do IDENT lookups.
@@ -491,4 +492,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.220 2003/12/27 13:01:12 alex Exp $
+$Id: ChangeLog,v 1.221 2003/12/29 14:53:26 alex Exp $
